static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Rubik&family=UnifrakturCook:wght@700&display=swap');

/* CSS rules to specify families 

font-family: 'Rubik',
sans-serif;
font-family: 'UnifrakturCook',
cursive;
*/
body {
    background-image: url(/media/bg.jpg);
    background-position-x: center;
    background-size: initial;
    background-attachment: fixed;
    padding-top: 9em;
    font-family: 'Rubik', sans-serif;
    color: antiquewhite;
}

/* center element */
.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

a,
li,
span {
    text-decoration: none;
    color: antiquewhite;
}

li {
    padding: 1em 1rem;
}

ul {
    list-style-type: none;
    padding-left: 0;
}

.navbar-brand {
    color: antiquewhite;
    font-size: xx-large;
}



a:hover {
    color: antiquewhite;
}

/* ---------- nav bar */
header {
    box-shadow: 0px 5px 10px #131916;
}

.bg-nav {
    background-color: #051D03;

}

.navbar-brand {
    font-family: 'UnifrakturCook', cursive;
    color: antiquewhite;
}

.navbar {
    font-family: 'Rubik', sans-serif;
    color: antiquewhite;
}

.navbar-toggler-icon {
    color: antiquewhite;
}

a.nav-link {
    color: antiquewhite;
}

a.nav-link.dropdown-toggle:hover,
a.nav-link:hover {
    color: antiquewhite;
    border-bottom: 5px solid antiquewhite;
    margin-bottom: -5px;
}

a.dropdown-item {
    color: antiquewhite;

}

a.dropdown-item:hover {
    color: antiquewhite;
    background-color: inherit;
    border-bottom: 5px solid #4E5243;
    margin-bottom: -5px;
}

ul.dropdown-menu.show {
    background-color: #051D03;
    max-width: fit-content;
}

/* --------- Cart Icon*/
.badge {
    float: right;
}

label.badge.badge-warning {
    padding: 0em 0em !important;

}

/* ----------- header carousel */


.carousel.slide {
    padding: 1rem .5rem;
}

.carousel-caption {
    background-color: rgba(78, 82, 67, 0.4);
    border-radius: 5px;
    max-width: fit-content;
    padding: 10px;
}


.carousel-item img {
    border-radius: 5px;
    max-height: 500px;
    max-width: 500px;

}

/* ----------- footer */

.spacer {
    aspect-ratio: 960/25;
    width: 100%;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
}

.wave {
    background-image: url(/media/footerwave.svg);
}

footer {
    background-color: #165b1b;
    width: 100%;
    text-align: center;
    padding-top: 10px;

}



h4.footer {
    padding-bottom: 1.5rem;
}


.li-social {
    display: inline;
    padding: 0 10px;
}

/*------------- Products page */

.row.products .card {

    width: 300px;
    padding: 10px;
    margin: 10px auto;
    background-color: inherit !important;
    border: none !important;
}

.inner-card {
    border-radius: 15px;
    transition-property: transform box-shadow;
    transition-duration: 1s;
    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
    background: rgba(255, 255, 255, 0.1);
    border-top: 1px solid rgba(255, 255, 255, 0.5);
    border-left: 1px solid rgba(255, 255, 255, 0.5);
    backdrop-filter: blur(5px);
}

.inner-card:hover {
    box-shadow: 4px 5px 5px 2px #051D03;
    transform: scale(1.1);
    z-index: 1000;
}

.img-fluid {
    height: 350px;
    width: 350px;
    border-radius: 15px;
    padding: 10px;
}

.btn:focus {
    color: #fff;
    background-color: #025ce2;
    border-color: #0257d5;
    box-shadow: none
}

.btn {
    margin: 5px;
    color: #000;
    border-radius: 20px;
    text-decoration: none;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

/*------------ product detail page */

.card-detail {
    color: antiquewhite;
    font-weight: 600;
    border-radius: 15px;
    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
    background: rgba(3, 66, 6, 0.1);
    border-top: 1px solid rgba(255, 255, 255, 0.5);
    border-left: 1px solid rgba(255, 255, 255, 0.5);
    backdrop-filter: blur(5px);
}

.img-detail {

    padding: 10px;

    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
    background: rgba(3, 66, 6, 0.1);
    border-top: 1px solid rgba(255, 255, 255, 0.5);
    border-left: 1px solid rgba(255, 255, 255, 0.5);
    backdrop-filter: blur(5px);

}

/*------------Cart page------------*/

.img-cart {
    max-width: 60px;
    max-height: 60px;
}

.table-glass,
.cart-empty {
    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
    background: rgba(3, 66, 6, 0.1);
    border-top: 1px solid rgba(255, 255, 255, 0.5);
    border-left: 1px solid rgba(255, 255, 255, 0.5);
    backdrop-filter: blur(5px);
    border-radius: 15px;
    color: antiquewhite;
}

/*-------------Toasts-------------*/
.message-container {
    position: fixed;
    top: 6em;
    right: 0;
    z-index: 9999999;
    max-width: 10em;
    color: #000;
}


/*------------Media Queries--------*/

@media (max-width: 991px) {}

